--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
-
+server.port=8089
+spring.application.name = EventService
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.datasource.url=jdbc:mysql://localhost:3306/eventia
+spring.datasource.username=root
+spring.datasource.password=
+spring.datasource.driver-class-name =com.mysql.jdbc.Driver
+spring.security.user.name=emna
+spring.security.user.password=moufid
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
